crates/toml_edit/tests/fixtures/invalid/key/start-bracket.stderr
TOML parse error at line 2, column 6
  |
2 | [xyz = 5
  |      ^
Invalid table header
Expected `.`, `]`
